poc: fixed bug in ref

--- a/action.yaml
+++ b/action.yaml
@@ -43,4 +43,4 @@ runs:
         opschain_requestTimeout: ${{ inputs.opschain_requestTimeout }}
       run: |-
         echo "{ \"github_workflow\": \"${GITHUB_WORKFLOW}\", \"github_repository\": \"${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}\", \"github_actor\":\"${GITHUB_ACTOR}\", \"github_run_id\":\"${GITHUB_RUN_ID}\", \"workflow_run_url\":\"${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}\", ${{inputs.opschain_action_metadata}} }" > metadata.json
-        opschain change create -p ${{inputs.opschain_project}} -e ${{inputs.opschain_environment}} -G ${{inputs.opschain_remote}} -g ${GITHUB_REF#refs/head} -y -a ${{inputs.opschain_action}} -m ./metadata.json
+        opschain change create -p ${{inputs.opschain_project}} -e ${{inputs.opschain_environment}} -G ${{inputs.opschain_remote}} -g ${GITHUB_REF#refs/heads/} -y -a ${{inputs.opschain_action}} -m ./metadata.json
