--- a/action.yaml
+++ b/action.yaml
@@ -12,7 +12,12 @@ inputs:
     required: true
   opschain_project:
     description: Project code for the change
+    default: ${GITHUB_REF#refs/heads/}
     required: true
+  opschain_project_properties:
+    description: Project code for the change
+    default: ${GITHUB_REF#refs/heads/}
+    required: false
   opschain_environment:
     description: Environment code for the change
     required: true
@@ -22,7 +27,7 @@ inputs:
   opschain_requestTimeout:
     description: opschain request timeout
     default: '60000'
-    required: true
+    required: false
   opschain_action_metadata:
     description: The action to perform during this change
     default: ''
@@ -33,12 +38,12 @@ inputs:
     required: true
   opschain_git_rev:
     description: The Git revision (branch/tag/commit) for the change
-    default: ${GITHUB_REF#refs/heads/}
+    default: ${GITHUB_SHA}
     required: true
 runs:
   using: composite
   steps:
-    - name: Deploy
+    - name: OpsChain-Bootstrap-Project-and-Environments
       shell: bash
       env:
         opschain_apiBaseUrl: ${{ inputs.opschain_apiBaseUrl }}
@@ -46,7 +51,23 @@ runs:
         opschain_password: ${{ inputs.opschain_password }}
         opschain_requestTimeout: ${{ inputs.opschain_requestTimeout }}
       run: |-
-        echo "{ \"github_workflow\": \"${GITHUB_WORKFLOW}\", \"github_sha\": \"${GITHUB_SHA}\", \"github_repository\": \"${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}\", \"github_actor\":\"${GITHUB_ACTOR}\", \"github_run_id\":\"${GITHUB_RUN_ID}\", \"workflow_run_url\":\"${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}\", ${{inputs.opschain_action_metadata}} }" > metadata.json
-        cat ./metadata.json
-        opschain change create --project-code ${{inputs.opschain_project}} --environment-code ${{inputs.opschain_environment}} --git-remote-name ${{inputs.opschain_git_remote}} --git-rev ${{inputs.opschain_git_rev}} --action ${{inputs.opschain_action}} --metadata-path ./metadata.json --confirm -f 
-        exit $?
+        PROJECT_EXISTS=$(curl -sL ${{ inputs.opschain_apiBaseUrl }}/projects --user ${{ inputs.opschain_username }}:${{ inputs.opschain_password }} | jq -r '.data[]| select(.attributes.code=="${{ inputs.opschain_project }}")' | wc -l)
+        echo "Project Exists: ${PROJECT_EXISTS}"
+        # Setup OpsChain Project
+        #opschain project create --name "" --code ${{inputs.opschain_project}} --description "" --confirm
+        # Setup OpsChain Project Git Remote 
+        # Setup OpsChain Project Properties
+        # Setup OpsChain Environment
+        # Setup OpsChain Environment Properties
+    # - name: OpsChain-Change-Create
+    #   shell: bash
+    #   env:
+    #     opschain_apiBaseUrl: ${{ inputs.opschain_apiBaseUrl }}
+    #     opschain_username: ${{ inputs.opschain_username }}
+    #     opschain_password: ${{ inputs.opschain_password }}
+    #     opschain_requestTimeout: ${{ inputs.opschain_requestTimeout }}
+    #   run: |-
+    #     echo "{ \"github_workflow\": \"${GITHUB_WORKFLOW}\", \"github_sha\": \"${GITHUB_SHA}\", \"github_repository\": \"${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}\", \"github_actor\":\"${GITHUB_ACTOR}\", \"github_run_id\":\"${GITHUB_RUN_ID}\", \"workflow_run_url\":\"${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}\", ${{inputs.opschain_action_metadata}} }" > metadata.json
+    #     cat ./metadata.json
+    #     #opschain change create --project-code ${{inputs.opschain_project}} --environment-code ${{inputs.opschain_environment}} --git-remote-name ${{inputs.opschain_git_remote}} --git-rev ${{inputs.opschain_git_rev}} --action ${{inputs.opschain_action}} --metadata-path ./metadata.json --confirm -f 
+    #     exit $?
