--- a/action.yaml
+++ b/action.yaml
@@ -56,7 +56,7 @@ runs:
         echo "inputs.opschain_project: ${inputs.opschain_project}"
         echo "inputs.opschain_environment: ${inputs.opschain_environment}"
 
-        PROJECT_EXISTS=$(curl -sL ${{ inputs.opschain_apiBaseUrl }}/projects --user ${{ inputs.opschain_username }}:${{ inputs.opschain_password }} | jq -r '.data[]| select(.attributes.code=="${{ inputs.opschain_project }}")' | wc -l)
+        PROJECT_EXISTS=$(curl -sL ${{ inputs.opschain_apiBaseUrl }}/projects --user ${{ inputs.opschain_username }}:${{ inputs.opschain_password }} | jq --arg project_code ${{ inputs.opschain_project }}  -r '.data[]| select(.attributes.code==$project_code)' | wc -l)
         echo "Project Exists: ${PROJECT_EXISTS}"
         # Setup OpsChain Project
         #opschain project create --name "" --code ${{inputs.opschain_project}} --description "" --confirm
