--- a/action.yaml
+++ b/action.yaml
@@ -119,6 +119,7 @@ runs:
         echo "INFO: ... setting Project Properties for Project [ ${PROJECT_CODE} ]"
         echo ${{ inputs.opschain_project_properties }} > ./x.properties
         cat ./x.properties
+        cat ./x.properties | jq -r '.'
         opschain project set-properties -p ${PROJECT_CODE} -f ./x.properties --confirm
 
         if [ $? -ne 0 ]; then
