--- a/action.yaml
+++ b/action.yaml
@@ -117,23 +117,15 @@ runs:
 
         # Setup OpsChain Project Properties
         echo "INFO: ... setting Project Properties for Project [ ${PROJECT_CODE} ]"
-        echo "INFO: echo ${{ inputs.opschain_project_properties }}"
-        echo ${{ inputs.opschain_project_properties }}
-        echo "INFO: ... echo ${{ inputs.opschain_project_properties }} > ./x.properties"
-        # echo ${{ inputs.opschain_project_properties }} > ./x.properties
-        cat<<EOF>./x.properties
+        cat<<EOF>./.opschain.project.properties
         ${{ inputs.opschain_project_properties }}
         EOF
-        echo "INFO: ... cat ./x.properties"
-        cat ./x.properties
-        echo "INFO: ... cat ./x.properties | jq -r '.'"
-        cat ./x.properties | jq -r '.'
-        opschain project set-properties -p ${PROJECT_CODE} -f ./x.properties --confirm
-
+        opschain project set-properties -p ${PROJECT_CODE} -f ./.opschain.project.properties --confirm
         if [ $? -ne 0 ]; then
           echo "ERROR: Failed to set Project level properties for OpsChain Project [ ${PROJECT_CODE} ]. Aborting."
           exit 1
         fi
+        rm -f ./.opschain.project.properties
 
         # Setup OpsChain Environment
         PROJECT_ID=$(curl -sL ${{ inputs.opschain_apiBaseUrl }}/projects/${PROJECT_CODE} --user ${{ inputs.opschain_username }}:${{ inputs.opschain_password }} | jq -r '.data.id')
