Allow hyphen in project and environment codes

--- a/action.yaml
+++ b/action.yaml
@@ -66,10 +66,7 @@ runs:
         PROJECT_CODE_NO_HYPHEN=${PROJECT_NAME//-/}
         # echo "INFO: PROJECT_CODE_NO_HYPHEN: ${PROJECT_CODE_NO_HYPHEN}"
 
-        PROJECT_CODE_NO_UNDERSCORE=${PROJECT_CODE_NO_HYPHEN//_/}
-        # echo "INFO: PROJECT_CODE_NO_UNDERSCORE: ${PROJECT_CODE_NO_UNDERSCORE}"
-
-        PROJECT_CODE_DOWNCASE=$(echo ${PROJECT_CODE_NO_UNDERSCORE} | tr '[:upper:]' '[:lower:]')
+        PROJECT_CODE_DOWNCASE=$(echo ${PROJECT_CODE_NO_HYPHEN} | tr '[:upper:]' '[:lower:]')
         # echo "INFO: PROJECT_CODE_DOWNCASE: ${PROJECT_CODE_DOWNCASE}"
 
         PROJECT_CODE=${PROJECT_CODE_DOWNCASE}
@@ -146,10 +143,7 @@ runs:
         ENVIRONMENT_CODE_NO_HYPHEN=${ENVIRONMENT_CODE//-/}
         # echo "INFO: ENVIRONMENT_CODE_NO_HYPHEN: ${ENVIRONMENT_CODE_NO_HYPHEN}"
 
-        ENVIRONMENT_CODE_NO_UNDERSCORE=${ENVIRONMENT_CODE_NO_HYPHEN//_/}
-        # echo "INFO: ENVIRONMENT_CODE_NO_UNDERSCORE: ${ENVIRONMENT_CODE_NO_UNDERSCORE}"
-
-        ENVIRONMENT_CODE_DOWNCASE=$(echo ${ENVIRONMENT_CODE_NO_UNDERSCORE} | tr '[:upper:]' '[:lower:]')
+        ENVIRONMENT_CODE_DOWNCASE=$(echo ${ENVIRONMENT_CODE_NO_HYPHEN} | tr '[:upper:]' '[:lower:]')
         # echo "INFO: ENVIRONMENT_CODE_DOWNCASE: ${ENVIRONMENT_CODE_DOWNCASE}"
 
         ENV_CODE=${ENVIRONMENT_CODE_DOWNCASE}
@@ -210,10 +204,7 @@ runs:
         ENVIRONMENT_CODE_NO_HYPHEN=${ENVIRONMENT_CODE//-/}
         # echo "INFO: ENVIRONMENT_CODE_NO_HYPHEN: ${ENVIRONMENT_CODE_NO_HYPHEN}"
 
-        ENVIRONMENT_CODE_NO_UNDERSCORE=${ENVIRONMENT_CODE_NO_HYPHEN//_/}
-        # echo "INFO: ENVIRONMENT_CODE_NO_UNDERSCORE: ${ENVIRONMENT_CODE_NO_UNDERSCORE}"
-
-        ENVIRONMENT_CODE_DOWNCASE=$(echo ${ENVIRONMENT_CODE_NO_UNDERSCORE} | tr '[:upper:]' '[:lower:]')
+        ENVIRONMENT_CODE_DOWNCASE=$(echo ${ENVIRONMENT_CODE_NO_HYPHEN} | tr '[:upper:]' '[:lower:]')
         # echo "INFO: ENVIRONMENT_CODE_DOWNCASE: ${ENVIRONMENT_CODE_DOWNCASE}"
 
         ENV_CODE=${ENVIRONMENT_CODE_DOWNCASE}
