Added log message to specify which opschain server url is in use

--- a/action.yaml
+++ b/action.yaml
@@ -197,5 +197,6 @@ runs:
         ENV_CODE=${ENVIRONMENT_CODE_DOWNCASE}
 
         echo "... running OpsChain CLI Version: $(opschain --version)"
+        echo "... using OpsChain Server: ${opschain_apiBaseUrl}"
         opschain change create --project-code ${PROJECT_CODE} --environment-code ${ENV_CODE} --git-remote-name ${{ inputs.opschain_git_remote }} --git-rev ${{inputs.opschain_git_rev}} --action ${{inputs.opschain_action}} --metadata-path ./metadata.json --confirm -f 
         exit $?
